Add some substance to ROVUView

--- a/ROVU/Core/resources/fxml/ROVUView.fxml
+++ b/ROVU/Core/resources/fxml/ROVUView.fxml
@@ -5,6 +5,6 @@
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ROVUViewController">
 	<children>
-		<Label fx:id="score" text="0"/>
+		<Label fx:id="score" text="Score: 0"/>
 	</children>
 </AnchorPane>
