--- a/ROVU/Core/resources/fxml/Root.fxml
+++ b/ROVU/Core/resources/fxml/Root.fxml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<TabPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MissionEditor">
+<TabPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MissionEditor">
    <tabs>
       <Tab closable="false" text="Premade missions">
         <content>
@@ -15,6 +20,7 @@
                <children>
                   <ChoiceBox fx:id="missionChoices" layoutX="34.0" layoutY="91.0" prefHeight="27.0" prefWidth="515.0" />
                   <Label layoutX="34.0" layoutY="61.0" text="Choose a mission" />
+                  <Button fx:id="runButton" layoutX="497.0" layoutY="340.0" mnemonicParsing="false" text="Run mission" />
                </children>
             </AnchorPane>
         </content>
