--- a/ROVU/Core/resources/fxml/Root.fxml
+++ b/ROVU/Core/resources/fxml/Root.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -13,19 +17,15 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.ScrollPane?>
 
-<TabPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="controller.MissionEditor">
+<TabPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MissionEditor">
 	<tabs>
 		<Tab closable="false" text="Premade missions">
 			<content>
-				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0"
-					prefWidth="200.0">
+				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 					<children>
-						<ChoiceBox fx:id="missionChoices" layoutX="34.0"
-							layoutY="91.0" prefHeight="27.0" prefWidth="515.0" />
+						<ChoiceBox fx:id="missionChoices" layoutX="34.0" layoutY="91.0" prefHeight="27.0" prefWidth="515.0" />
 						<Label layoutX="34.0" layoutY="61.0" text="Choose a mission" />
-						<Button fx:id="runButton" layoutX="497.0" layoutY="340.0"
-							mnemonicParsing="false" text="Run mission" />
+						<Button fx:id="runButton" layoutX="497.0" layoutY="340.0" mnemonicParsing="false" text="Run mission" />
 					</children>
 				</AnchorPane>
 			</content>
@@ -34,31 +34,24 @@
 			<content>
 				<AnchorPane prefHeight="400.0" prefWidth="600.0">
 					<children>
-						<ListView fx:id="pointListView" layoutX="285.0" layoutY="68.0"
-							prefHeight="231.0" prefWidth="293.0" AnchorPane.leftAnchor="285.0"
-							AnchorPane.rightAnchor="22.0" />
+						<ListView fx:id="pointListView" layoutX="285.0" layoutY="68.0" prefHeight="231.0" prefWidth="293.0" AnchorPane.leftAnchor="285.0" AnchorPane.rightAnchor="22.0" />
 						<Label layoutX="285.0" layoutY="38.0" text="Mission Points" />
-						<Button fx:id="createMissionBtn" layoutX="468.0" layoutY="323.0"
-							mnemonicParsing="false" text="Create Mission"
-							AnchorPane.rightAnchor="22.0" />
+						<Button fx:id="createMissionBtn" layoutX="468.0" layoutY="323.0" mnemonicParsing="false" text="Create Mission" AnchorPane.rightAnchor="22.0" />
 						<VBox layoutX="45.0" layoutY="38.0">
 							<children>
 								<Label text="Add Mission Point" />
-								<HBox layoutX="51.0" layoutY="94.0" prefHeight="65.0"
-									prefWidth="200.0">
+								<HBox layoutX="51.0" layoutY="94.0" prefHeight="65.0" prefWidth="200.0">
 									<children>
 										<VBox prefHeight="200.0" prefWidth="100.0">
 											<children>
 												<Label text="x:* " textFill="#ff5656" />
-												<TextField prefHeight="27.0" prefWidth="32.0"
-													fx:id="xTextfield" />
+												<TextField prefHeight="27.0" prefWidth="32.0" fx:id="xTextfield" />
 											</children>
 										</VBox>
 										<VBox prefHeight="200.0" prefWidth="100.0">
 											<children>
 												<Label text="z:*" textFill="#ff5656" />
-												<TextField fx:id="zTextfield" prefHeight="27.0"
-													prefWidth="32.0" />
+												<TextField fx:id="zTextfield" prefHeight="27.0" prefWidth="32.0" />
 											</children>
 										</VBox>
 									</children>
@@ -72,8 +65,7 @@
 											</VBox.margin>
 										</TextField>
 										<Label text="Constraint:" />
-										<ChoiceBox fx:id="constraintChoices" prefHeight="27.0"
-											prefWidth="202.0" />
+										<ChoiceBox fx:id="constraintChoices" prefHeight="27.0" prefWidth="202.0" />
 									</children>
 								</VBox>
 								<Button fx:id="addPointBtn" mnemonicParsing="false" text="Add" />
@@ -86,16 +78,10 @@
 
 		<Tab closable="false" text="Executed points">
 			<content>
-				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0"
-					prefWidth="400.0">
-					<children>
-						<ScrollPane fx:id="execPoints">
-							<content>
-								<VBox prefWidth="200" alignment="center">
-								</VBox>
-							</content>
-						</ScrollPane>
-					</children>
+				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="400.0">
+               <children>
+                  <ListView fx:id="executedPointListView" layoutX="173.0" layoutY="84.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0" />
+               </children>
 				</AnchorPane>
 			</content>
 		</Tab>
