--- a/ROVU/Core/resources/fxml/Root.fxml
+++ b/ROVU/Core/resources/fxml/Root.fxml
@@ -26,6 +26,7 @@
 						<ChoiceBox fx:id="missionChoices" layoutX="34.0" layoutY="91.0" prefHeight="27.0" prefWidth="515.0" />
 						<Label layoutX="34.0" layoutY="61.0" text="Choose a mission" />
 						<Button fx:id="runButton" layoutX="497.0" layoutY="340.0" mnemonicParsing="false" text="Run mission" />
+                  <Button fx:id="emergencyStopBtn" layoutX="29.0" layoutY="340.0" mnemonicParsing="false" text="EMERGENCY STOP" />
 					</children>
 				</AnchorPane>
 			</content>
